# telepathy-qt4-yell

./: CMakeLists.txt  NEWS
TelepathyQt4Yell/: CMakeLists.txt  ConnectionCapabilities  connection-capabilities.cpp  connection-capabilities.h  contact-capabilities.cpp  contact-capabilities.h
TelepathyQt4Yell/Farstream/: channel.cpp
TelepathyQt4Yell/Models/: CMakeLists.txt  SessionConversationModel  abstract-conversation-model.cpp  abstract-conversation-model.h  accounts-model-item.cpp  accounts-model-item.h  accounts-model.cpp  accounts-model.h  avatar-image-provider.cpp  contact-model-item.cpp  contact-model-item.h  conversation-item.cpp  conversation-item.h  flat-model-proxy.cpp  session-conversation-model.cpp  session-conversation-model.h  text-event-item.cpp  text-event-item.h  tree-node.cpp
tests/dbus/: CMakeLists.txt  accounts-model-accounts.cpp  accounts-model-basics.cpp  accounts-model-contacts.cpp  accounts-model-item-tests.cpp  avatar-image-provider-tests.cpp  call-chan.cpp
tests/lib/: CMakeLists.txt
tests/lib/glib/: CMakeLists.txt
tests/lib/glib/call/: CMakeLists.txt
